--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.18"
+    "vee-validate": "^4.15.1",
+    "vue": "^3.5.18",
+    "vue-select": "^4.0.0-beta.6",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
