--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^12.4.0",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.18",
     "vue-select": "^4.0.0-beta.6",
