--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^12.4.0",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.18",
+    "vue-router": "^4.6.3",
     "vue-select": "^4.0.0-beta.6",
     "yup": "^1.7.1"
   },
