--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "firebase": "^12.4.0",
+    "pinia": "^3.0.4",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.18",
     "vue-router": "^4.6.3",
